avoid using ">" in css -- so it works on IE too
svn: r10443

--- a/collects/scribble/scribble.css
+++ b/collects/scribble/scribble.css
@@ -451,8 +451,8 @@ i {
   color: black;
 }
 
-.techoutside:hover > .techinside {
-  color: inherit;
+.techinside:hover {
+  color: blue;
 }
 
 .bibliography td {
